--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -4,3 +4,20 @@
   gap: 1rem;
   width: 300px;
 }
+.form input {
+  padding: 20px;
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.form button {
+  padding: 20px;
+  border: none;
+  border-radius: 20px;
+  background-color: green;
+  color: white;
+  font-size: 19px;
+}
